export type CreateTaskDTO = {
  content: string;
};
